apps/web/public/docs/design/v2/APT-DESIGN-OVERVIEW.md
---
docId: design-overview
slug: overview
major: 2
semanticVersion: 2.1.0
status: candidate
publishedAt: 2026-04-18
---
# APT Design Overview

The Design area is the public operating model for APT. It explains how problems are framed, how the system is expressed, how architecture enforces the boundaries, and where stable reference models live after exploratory work matures.

---

## Purpose

Design exists to make the doctrine behind APT legible. It is not the place for every artifact. It is the place where standards, reasoning, and reusable references are documented clearly enough to inspect and reuse.

---

## Design Areas

### Design Thinking

Problem framing, assumption testing, constraint analysis, decision trees, iteration cycles, and systems mapping.

Use it when the right move is not obvious yet and the cost of being wrong is meaningful.

### Principles Framework

Canonical 10-group model for APT operating behavior across Thinking, Design, Architecture, System, Execution, Quality, Release, Operations, Knowledge, and AI augmentation.

Use it when you need the governing cross-layer model before drilling into a specific doctrine route.

### Design System

Tokens, semantics, component patterns, spacing, responsive behavior, motion guidance, data visual standards, and inline messaging standards.

Use it when the goal is visual consistency, calm interaction, and a reusable UI language.

### Design Architecture

Repo layout, package boundaries, deployment contracts, API ownership, and enforcement rules.

Use it when structure must prevent delivery drift and accidental coupling.

### Systems

Stable reference models and reusable patterns with documented purpose, decisions, tradeoffs, and related proof.

Use it when exploratory work has converged into something coherent enough to teach or reuse.

### Content Strategy

Information architecture, section naming, visitor paths, and content maturity rules.

Use it when labels, structure, and content relationships determine whether the system is understandable.

---

## Governing Principle

APT Design separates:

- **method** from implementation
- **standards** from experiments
- **reference models** from transient artifacts
- **visitor intent** from internal team vocabulary

That separation keeps the site legible and prevents everything from collapsing into one generic portfolio bucket.

---

## Content Maturity Model

1. **Learn** explains ideas and helps people apply them.
2. **Experiments** shows concepts, mocks, and proof before the work settles.
3. **Design** defines doctrine, standards, and operating rules.
4. **Systems** preserves the stable models that survive exploration.

---

## 2-Zone Quick Reference

The local published mirror/reference surface uses a strict 2-zone model:

- `apps/web/docs/design/versions/v*/`  
  local versioned mirror/reference docs
- `apps/web/docs/design/static/`  
  local support contracts (review bundle, lint checklist, token contracts, AI instructions reference)

Control plane:
- `apps/web/docs/design/APT-DESIGN-DOCS-MANIFEST.json` maps per-doc majors and publish paths

Generated outputs:
- `/docs/design/*` latest aliases are generated at publish time
- `/docs/design/v*/...` canonical major paths are generated at publish time
- `apps/web/public/docs/*` is output-only, never authored source

---

## What Good Design Doctrine Produces

- A clear public vocabulary for how APT is organized
- Durable standards for how design and delivery decisions are made
- Reusable reference material instead of isolated examples
- Cross-links between learning, experimentation, doctrine, and reference models

---

## Failure Modes

- Treating every artifact like a portfolio piece with the same job
- Letting internal team language leak into public navigation
- Mixing exploratory proof and stable references without distinction
- Documenting a design model that no longer matches the live system

---

## Related Documents

- [APT Design Thinking](./APT-DESIGN-THINKING.md)
- [APT Principles Framework](./APT-PRINCIPLES-FRAMEWORK.md)
- [APT Design System](./APT-DESIGN-SYSTEM.md)
- [APT Design Reference Source Map](./APT-DESIGN-REFERENCE-SOURCE-MAP.md)
- [APT Content Naming and Messaging](./APT-CONTENT-NAMING-AND-MESSAGING.md)
- [APT Design Architecture](./APT-DESIGN-ARCHITECTURE.md)
- [APT Content Strategy](./APT-CONTENT-STRATEGY.md)
- [APT Systems Reference Models](./APT-DESIGN-SYSTEMS.md)
- [APT Design Versioning](./APT-DESIGN-VERSIONING.md)

Pattern references (v2):
- [Portfolio Surface](./patterns/Portfolio-Surface/index.md)
- [Docs Browser](./patterns/Docs-Browser/index.md)
- [Insights Surface](./patterns/Insights-Surface/index.md)
- [Inline Messages](./patterns/Inline-Messages/index.md)
- [Bar Chart](./patterns/Bar-Chart/index.md)
- [Line Chart](./patterns/Line-Chart/index.md)
- [Heatmap](./patterns/Heatmap/index.md)
- [Dumbbell Plot](./patterns/Dumbbell-Plot/index.md)
